--- a/Resources/ru.lproj/Localizable.strings
+++ b/Resources/ru.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "Восстановить кошелек";
-"restore_wallet_info" = "Вы пытаетесь восстановить существующий кошелек. Пожалуйста, обратите внимание, если ваш кошелек используется на другом устройстве, ваш баланс будет восстановлен до актуального состояния, но история транзакций и адреса будут хранится эксклюзивно для каждого устройства.";
+"restore_wallet_info" = "Вы пытаетесь восстановить существующий кошелек Beam. Пожалуйста, обратите внимание, что если вы используете кошелек на другом устройстве, ваш баланс будет обновлен, но история транзакций и адреса будут храниться отдельно на каждом устройстве.";
 "no_space_title" = "Недостаточно места в памяти";
 "no_space_info" = "На устройстве требуется не менее 200 МБ свободного места для восстановления кошелька";
 "beam_title" = "Масштабируемая, приватная криптовалюта";
@@ -16,7 +16,7 @@
 "seed_prhase" = "Контрольная фраза";
 "input_seed" = "Введите вашу контрольную фразу";
 "confirm_seed_text" = "Что бы убедиться что вы правильно записали вашу контрольную фразу, пожалуйста введите нужные слова в поля снизу";
-"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed" = "Ваша контрольная фраза является ключом для доступа ко всем вашим средствам. Храните фразу в защищенном месте. В случае потери контрольной фразы, вы не сможете восстановить доступ к вашим средствам.";
 "display_seed_old" = "Ваша контрольная фраза является ключом для доступа ко всем вашим средствам. Храните фразу в защищенном месте. В случае потери контрольной фразы, вы не сможете восстановить доступ к вашим средствам.";
 "intro_seed_main" = "Создать новый кошелек и новую контрольную фразу.Если вы потеряете доступ к своему устройству, для восстановления кошелька вам понадобится контрольная фраза.Никогда не сохраняйте контрольную фразу в связке ключей или в программах по управлению паролями, а также в файлах или удаленных папках.";
 "intro_seed_1" = "Никому не показывайте вашу контрольную фразу";
@@ -51,8 +51,8 @@
 "no_internet" = "Нет соединения с Интернетом";
 "wallet_not_created" = "Кошелек не создан";
 "wallet_not_opened" = "Ошибка при открытии кошелька";
-"restor_wallet_warning" = "Пожалуйста, подождите завершения синхронизации и не закрывайте или сворачивайте приложение. Восстановление кошелька может занять некоторое время.";
-"restor_wallet_info" = "Будет восстановлен только баланс кошелька (UTXO). Информация о транзакциях не хранится в блокчейне.";
+"restor_wallet_warning" = "Восстановление вашего кошелька может занять некоторое время. Пожалуйста, подождите, пока закончится синхронизация - не закрывайте и не минимизируйте приложение.";
+"restor_wallet_info" = "Восстановится только баланс кошелька (UTXOs). Информация о транзакции всегда конфиденциальна и никогда не хранится в блокчейне.";
 "receive" = "Получить";
 "send" = "Отправить";
 "available" = "Доступно";
@@ -101,7 +101,7 @@
 "addresses" = "Мои адреса";
 "utxo" = "UTXO";
 "settings" = "Настройки";
-"details" = "Подробности";
+"details" = "Детали";
 "utxo_details" = "Информация о UTXO";
 "utxo_type" = "Тип UTXO";
 "all" = "Все";
@@ -119,6 +119,8 @@
 "delete_address" = "Удалить адрес";
 "delete_address_transaction" = "Удалить адрес вместе с соответствующими транзакциями";
 "delete_address_only" = "Удалить только сам адрес";
+"delete_address_text" = "Are you sure you want to delete this address from your wallet?";
+"delete_contact_text" = "Are you sure you want to delete this contact from your wallet?";
 "category" = "Метка";
 "in_24_hours" = "24 часа";
 "never" = "Никогда";
@@ -168,8 +170,8 @@
 "category_exist" = "Метка с таким именем уже существует";
 "edit" = "Править";
 "delete" = "Удалить";
-"no_category_addresses" = "There are no addresses associated with this tag";
-"no_category_contacts" = "There are no contacts associated with this tag";
+"no_category_addresses" = "Нет адресов, связанных с этим тегом";
+"no_category_contacts" = "Нет контактов, связанных с этим тегом";
 "delete_category" = "Удалить метку";
 "beams_send" = "Отправлено";
 "undo" = "Отменить";
@@ -320,8 +322,8 @@
 "owner_key_warning" = "Deploying the owner key at a trusted node will allow the node to monitor all UTXO sent to any wallet generated from the same seed phrase.\n\nDon't share your Owner Key with others - it allows inspection and monitoring of your funds."; // \n\n - new line. please don't remove this symbols.
 "key_code" = "Код ключа";
 "or" = "Или";
-"pick_address" = "Сдача"; // change address
-"utxo_type_change" = "Сдача"; // utxo type
+"pick_address" = "Изменить"; // change address
+"utxo_type_change" = "Изменить"; // utxo type
 "your_current_password" = "Введите текущий пароль";
 "paste_payment_proof" = "Вставьте подтверждение платежа здесь";
 "payment_proof_error" = "Невозможно декодировать подтверждение";
@@ -341,7 +343,7 @@
 "awaiting_deposit" = "В ожидании оплаты";
 "order_id" = "Идентификатор заказа";
 "receiving_amount_dif" = "Сумма поступлений может отличаться из-за колебаний рынка";
-"copy_details" = "Копировать подробности";
+"copy_details" = "Копировать детали";
 "copy_code" = "Копировать код";
 "version" = "Версия приложения"; // example Version 3.1
 "as_set" = "Как установлено сейчас";
@@ -351,15 +353,15 @@
 "language" = "Язык";
 "optional" = "Не обязательное для заполнения";
 "invalid_address_title" = "Неправильный адрес";
-"invalid_address_text" = "The provided node address is invalid. Please, check if the entered address is correct";
+"invalid_address_text" = "Указанный адрес узла недействителен. Пожалуйста, проверьте, является ли введенный адрес верным";
 "insufficient_funds" = "Недостаточно средств: необходимо (value) beams для завершения транзакции";
 "downloading" = "Загружено";
 "sent_to_own" = "Отправлено на собственный адрес";
 "sending_to_own" = "Отправлено на свой адрес";
 "default" = "Стандарт";
 "my_active" = "Активные"; // addresses
-"my_expired" = "Мои просроченные"; // addresses
-"general_settings" = "Основные настройки";
+"my_expired" = "Просроченные"; // addresses
+"general_settings" = "Общее";
 "unavailable" = "Недоступно";
 "in_progress_out" = "В процессе (исходящий)";
 "in_progress_in" = "В процессе (входящий)";
@@ -369,7 +371,6 @@
 "h" = "ч"; // hour
 "m" = "м"; // minute
 "send_qr_secure" = "Отправьте этот QR-код отправителю средств, по любому безопасному внешнему каналу.";
-"share_transaction" = "Поделиться деталями транзакции";
 "auth_face_confirm" = "Подтвердите свое лицо для аутентификации";
 "auth_touch_confirm" = "Пройдите аутентификацию используя отпечаток пальца";
 "auth_bio_failed" = "(Mechanism) заблокирован из-за нескольких неудачных попыток. Введите код доступа iPhone, чтобы включить (Mechanism)."; // (Mechanism) is Face ID or Touch ID.
@@ -423,7 +424,7 @@
 "restore_create_text" = "Если вы восстановите кошелек, история транзакций и адреса будут потеряны на этом устройстве.";
 "proceed" = "Продолжить";
 "info_restore_title" = "Не запускайте одновременно два кошелька, инициированные из одной фразы seed";
-"info_restore_text" = "История операций и баланс не будут синхронизированы между устройствами.";
+"info_restore_text" = "If you run two wallets with the same seed, their balances will not be synchronized. To keep the balances in sync, use your own trusted node configured with your owner key. Also note that transaction history is not sycnrhonized between wallets in any case.";
 "crash_title" = "Сбой приложения";
 "crash_message" = "Вы хотите сообщить нам о ограниченном количестве информации? Сбор информации о сбоях позволит нам быстрее обнаружить и исправлять ошибки. Это только один отчет, связанный с ошибкой, мы не будем собирать какие-либо из ваших данных позже.";
 "crash_negative" = "Нет, спасибо";
@@ -431,53 +432,67 @@
 "estimted_time" = "Приблизительное время";
 "node_address" = "Адрес узла";
 "create_new_password_short" = "Создать новый пароль";
-"a_15" = "After 15 seconds"; // lock screen after 15 seconds
-"a_30" = "After 30 seconds"; // lock screen after 30 seconds
-"a_60" = "After 1 minute"; // lock screen after 1 minute
-"a_15_1" = "15 seconds";
-"a_30_1" = "30 seconds";
+"a_15" = "Через 15 секунд"; // lock screen after 15 seconds
+"a_30" = "Через 30 секунд"; // lock screen after 30 seconds
+"a_60" = "Через 1 минуту"; // lock screen after 1 minute
+"a_15_1" = "15 секунд";
+"a_30_1" = "30 секунд";
 "a_60_1" = "1 минута";
 "lock_screen" = "Блокировать экран";
-"colour" = "Colour";
+"colour" = "Цвет";
 "show_owner_key_auth_1" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must enter your password to see Owner Key.";
 "show_owner_key_auth_2" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must pass 2-step verification (submit a password and use Touch ID) to see your Owner Key.";
 "show_owner_key_auth_3" = "Deploying the Owner Key at a trusted node will allow the node to monitor all UTXOs sent to this wallet and any wallet generated from your seed phrase. You must pass 2-step verification (submit a password and use Face ID) to see your Owner Key.";
-"use_touch_id" = "Use your Touch ID";
-"use_face_id" = "Use your Face ID";
-"enter_your_password" = "Enter your password";
+"use_touch_id" = "Использовать Touch ID";
+"use_face_id" = "Использовать Face ID";
+"enter_your_password" = "Введите пароль";
 "share_details" = "Share details";
 "faucet_title" = "Start using the wallet";
-"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
-"faucet_ok" = "Yes, please";
-"faucet_no" = "No, I'm fine";
-"show_seed_phrase" = "Show seed phrase";
+"faucet_text" = "See the wallet in action. Get a very small amount of Beams from the community faucet.";
+"faucet_ok" = "Да, пожалуйста";
+"faucet_no" = "Нет";
+"show_seed_phrase" = "Показать контрольную фразу";
 "increase_security" = "Increase security";
 "increase_security_text" = "If you ever lose your device, you will need this phrase to recover your wallet!\nNever type your seed phrase in keychains or password managers.\nNever save it in your local or remote folders in any form.";
-"all_set" = "You are all set";
+"all_set" = "Всё готово!";
 "wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
 "make_wallet_secure_title" = "Make your wallet secure";
-"make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
+"make_wallet_secure_text" = "Write down and validate your seed phrase so you can always recover your funds.";
 "complete_verification" = "Complete verification";
-"yes_please" = "yes, please";
-"i_will_later" = "i will do it later";
-"create_password" = "Create password";
-"get_coins" = "Get coins";
+"yes_please" = "да, пожалуйста";
+"i_will_later" = "Подтвердить позже";
+"create_password" = "Создать пароль";
+"get_coins" = "Получить монеты";
 "secure_your_phrase" = "Secure your phrase";
-"privacy" = "Privacy";
+"privacy" = "Безопасность";
 "complete_wallet_verification" = "Complete wallet verification";
 "clear_local_data" = "Clear local wallet data";
 "get_beam_faucet" = "Get Beams from Beam Community Faucet";
 "save_wallet_logs" = "Сохранить лог";
-"all_time" = "For all time";
-"last_5_days" = "Last 5 days";
-"last_15_days" = "Last 15 days";
-"last_30_days" = "Last 30 days";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
+"all_time" = "На все время";
+"last_5_days" = "Последние 5 дней";
+"last_15_days" = "Последние 15 дней";
+"last_30_days" = "Последние 30 дней";
+"clear_wallet" = "Удалить текущий кошелек";
+"clear_wallet_text" = "All data will be erased. Make sure you’ve saved your seed phrase if you want to restore this wallet later on! Are you sure you want to remove your wallet?";
+"clear_wallet_password" = "Enter your password to remove your wallet";
 "change_node_text_1" = "Use Face ID or enter your password to change node settings";
 "change_node_text_2" = "Use Touch ID or enter your password to change node settings";
 "change_node_text_3" = "Enter your password to change node settings";
 "change_settings_text_1" = "Use Face ID or enter your password to change settings";
 "change_settings_text_2" = "Use Touch ID or enter your password to change settings";
-"change_settings_text_3" = "Enter your password to change settings";
+"change_settings_text_3" = "Введите свой текущий пароль, чтобы изменить настройки";
 "paste" = "Вставить";
+"status" = "Статус"; // transaction status
+"remove_wallet" = "Удалить кошелек";
+"export_wallet_data" = "Экспорт данных кошелька";
+"import_wallet_data" = "Импорт данных кошелька";
+"utilities" = "Утилиты";
+"incorrect_file_title" = "Некорректный файл";
+"incorrect_file_text" = "Файл, который вы пытаетесь импортировать в Beam кошелек не подходит. Пожалуйста, выберите другой файл и повторите попытку.";
+"import_data_title" = "Импорт данных";
+"import_data_text" = "Are you sure you want to import data to your Beam wallet? All the current data will be replaced with imported one.";
+"import_data_text_2" = "Only the data exported from the wallet with the same seed phrase can be imported.";
+"import" = "Импорт";
+"export_data" = "Экспорт данных";
+"till_block" = "till block height";
