--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -119,6 +119,8 @@
 "delete_address" = "Delete address";
 "delete_address_transaction" = "Delete address and related transactions";
 "delete_address_only" = "Delete address only";
+"delete_address_text" = "Are you sure you want to delete this address from your wallet?";
+"delete_contact_text" = "Are you sure you want to delete this contact from your wallet?";
 "category" = "Tag";
 "in_24_hours" = "In 24 hours";
 "never" = "Never";
@@ -446,7 +448,7 @@
 "enter_your_password" = "Enter your password";
 "share_details" = "Share details";
 "faucet_title" = "Start using the wallet";
-"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
+"faucet_text" = "See the wallet in action. Get a very small amount of Beams from the community faucet.";
 "faucet_ok" = "Yes, please";
 "faucet_no" = "No, I'm fine";
 "show_seed_phrase" = "Show seed phrase";
@@ -455,10 +457,10 @@
 "all_set" = "You are all set";
 "wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
 "make_wallet_secure_title" = "Make your wallet secure";
-"make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
+"make_wallet_secure_text" = "Write down and validate your seed phrase so you can always recover your funds.";
 "complete_verification" = "Complete verification";
 "yes_please" = "yes, please";
-"i_will_later" = "i will do it later";
+"i_will_later" = "I will do it later";
 "create_password" = "Create password";
 "get_coins" = "Get coins";
 "secure_your_phrase" = "Secure your phrase";
@@ -490,5 +492,7 @@
 "incorrect_file_text" = "The file you’re trying to import to Beam wallet doesn’t fit. Please choose another file and try again.";
 "import_data_title" = "Import data";
 "import_data_text" = "Are you sure you want to import data to your Beam wallet? All the current data will be replaced with imported one.";
+"import_data_text_2" = "Only the data exported from the wallet with the same seed phrase can be imported.";
 "import" = "Import";
 "export_data" = "Export data";
+"till_block" = "till block height";
